* (bug 28455) Add 'toponly' to recentchanges API module
* (bug 26873) API: Add 'toponly' filter in usercontribs module
* (bug 28586) YAML: strings that are the same as boolean literals
* (bug 28591) Update/replace/supplement spyc (YAML parsing library)
* YAML API output is now 1.2 compliant, using JSON as the formatter
* (bug 28672) give information about misermode on api

=== Languages updated in 1.18 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Angika (anp) (new)
* Brahui (brh) (new)
* Central Dusun (new)
* Jamaican Creole English (jam) (new)
* Khowar (khw) (new)
* Liv (liv) (new)
* Tokipona (tp) (removed) 'tokipona' is still  valid.
* (bug 17160) Gender specific display text for User namespace
* Link trail added for sl and sh
* (bug 27633) Add characters to linkTrail for Potuguese (pt and pt-br)
* (bug 27426) Set $namespaceGenderAliases for Arabic (ar)
* (bug 27385) Set Polish $namespaceGenderAliases
* (bug 27681) Set $namespaceGenderAliases for Portuguese (pt and pt-br)
* (bug 27785) Fallback language for Kabardian (kbd) is English now.
* (bug 27825) Raw watchlist edit message now uses formatted numbers.
* (bug 28040) Turkish: properly lower case 'I' to 'ı' (dotless i) and
  uppercase 'i' to 'İ' (dotted i)

== Compatibility ==

MediaWiki 1.18 requires PHP 5.2.3. PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.18 has several database changes since 1.17, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure